# Clinical-rag-system

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  streamlit_app.py
data/sample_guidelines/: guideline_anticoag_afd.txt  guideline_cap.txt  guideline_hypertension.txt  guideline_insulin.txt  guideline_pediatric_resus.txt  guideline_sepsis_2023.txt
src/: cli.py  config.py  llm_providers.py  models.py  rag_pipeline.py
